Upgrade to gatling-3.14.3; Refactor running scripts