@@ -1,3 +1,8 @@
 #!/bin/bash
 SIMULATION_NAME=${SIMULATION_NAME:-gatling.test.example.simulation.ExampleGetSimulation}
-exec java ${JAVA_OPTS} -cp bin/gatling-scala-example.jar  io.gatling.app.Gatling --simulation ${SIMULATION_NAME} --results-folder results
+JAVA_OPTS="${JAVA_OPTS} --add-opens java.base/java.lang=ALL-UNNAMED"
+exec java ${JAVA_OPTS} \
+  -cp bin/gatling-scala-example.jar  \
+  io.gatling.app.Gatling \
+  --simulation ${SIMULATION_NAME} \
+  --results-folder results
