@@ -1,4 +1,8 @@
 #!/usr/bin/env bash
 JAVA_OPTS="-DbaseUrl=http://localhost:8080  -DdurationMin=0.25 -DrequestPerSecond=10"
 SIMULATION_NAME=gatling.test.example.simulation.ExampleSimulation
-java ${JAVA_OPTS} -cp target/gatling-scala-example.jar io.gatling.app.Gatling --simulation "${SIMULATION_NAME}"  --results-folder results
+JAVA_OPTS="${JAVA_OPTS} --add-opens java.base/java.lang=ALL-UNNAMED"
+java ${JAVA_OPTS} -cp target/gatling-scala-example.jar io.gatling.app.Gatling \
+  --simulation "${SIMULATION_NAME}"  --results-folder results
+
+
